# fastapi-boilerplate

./: .uv.toml  README.md  pyproject.toml  run.py  run.sh
app/: __init__.py  main.py
app/api/: deps.py  frontend.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: auth.py  items.py  users.py
app/core/: config.py  database.py  security.py  utils.py
app/models/: __init__.py  item.py  user.py
app/schemas/: __init__.py  item.py  token.py  user.py
app/static/css/: base.css  components.css  layout.css
app/static/js/: main.js
app/templates/: about.html  base.html  index.html
